2008-12-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Let --posix turn off more GNU extensions.
	* sed/compile.c (mark_subst_opts): Turn off subst options i, I,
	s, S, x, X, m, and M in --posix mode.
	(compile_address): Disallow address modifiers, `FIRST~STEP',
	`ADDR1,+N', and `ADDR1,~N' in --posix mode.
	(compile_program): In --posix mode, do not accept e or z commands;
	do not accept text between an a, c, or i command and the following
	backslash; do not accept an argument to the l command.

2008-12-22  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot.conf: Request modules emulating mb functions.
	* configure.ac: Do not look for mb functions here.

2008-10-03  Paolo Bonzini  <bonzini@gnu.org>
	    Jim Meyering  <meyering@redhat.com>

	* autoboot.conf: Add localcharset.
	* Makefile.am: Remove intl subdir.  Require Automake 1.10.
	* configure.ac: Remove useless macros, switch to external gettext.
	* lib/Makefile.am: Remove intl subdir from CPPFLAGS.
	* sed/Makefile.am: Remove intl subdir from CPPFLAGS.

2008-10-02  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot: Sync with gnulib's build-aux/bootstrap.

2008-09-29  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot: Sync with gnulib's build-aux/bootstrap.

2008-09-29  Paolo Bonzini  <bonzini@gnu.org>

	* testsuite/Makefile.am: Add the utf8-{1,2,3,4} tests.
	* testsuite/Makefile.tests: Add the utf8-{1,2,3,4} tests.
	* testsuite/runtest: Support skipping tests.
	* testsuite/utf8-1.good: New.
	* testsuite/utf8-1.inp: New.
	* testsuite/utf8-1.sed: New.
	* testsuite/utf8-2.good: New.
	* testsuite/utf8-2.inp: New.
	* testsuite/utf8-2.sed: New.
	* testsuite/utf8-3.good: New.
	* testsuite/utf8-3.inp: New.
	* testsuite/utf8-3.sed: New.
	* testsuite/utf8-4.good: New.
	* testsuite/utf8-4.inp: New.
	* testsuite/utf8-4.sed: New.

2008-09-29  Paolo Bonzini  <bonzini@gnu.org>

	* BUGS: Document s/.*.// behavior with invalid multibyte sequences.
	* NEWS: Document `z' extension.
	* doc/sed-in.texi: Document both things.