@@ -1,5 +1,5 @@
 /*  GNU SED, a batch stream editor.
-    Copyright (C) 1989,90,91,92,93,94,95,98,99,2002,2003,2004,2005,2006,2008
+    Copyright (C) 1989,90,91,92,93,94,95,98,99,2002,2003,2004,2005,2006,2008,2009
     Free Software Foundation, Inc.
 
     This program is free software; you can redistribute it and/or modify
@@ -828,6 +828,7 @@ read_pattern_space(input, the_program, append)
       if (input->reset_at_next_file)
 	{
 	  input->line_number = 0;
+	  hold.length = 0;
 	  reset_addresses (the_program);
 	  rewind_read_files ();
 
